--- a/Turma1C2023-main/Turma1C2023/index.html
+++ b/Turma1C2023-main/Turma1C2023/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
-
-        <meta charset="UTF-8">
-        <meta name ="viewport"content=
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Barbearia Alura</title>
+    <link rel="stylesheet" href = "style.css">
+</head>
+<body>
+    <img id="banner.jpg" alt="Logotipo" >
+    <h1> Sobre a Barberia Alura <h1>
+        <p> Localizada no coração da cidade 
+       <strong-barbearia alura
+</body>
+</html>
